; ModuleID = '/home/carl/AnghaBench/stb/tests/caveview/extr_cave_render.c_set_tex2_alpha.c'
source_filename = "/home/carl/AnghaBench/stb/tests/caveview/extr_cave_render.c_set_tex2_alpha.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GL_TEXTURE_2D_ARRAY_EXT = common dso_local global i32 0, align 4
@voxel_tex = common dso_local global i32* null, align 8
@tex2_data = common dso_local global i32** null, align 8
@GL_RGBA = common dso_local global i32 0, align 4
@GL_UNSIGNED_BYTE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @set_tex2_alpha(float %0) #0 {
  %2 = alloca float, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store float %0, float* %2, align 4
  %5 = load float, float* %2, align 4
  %6 = call i64 @stb_lerp(float %5, i32 0, i32 255)
  %7 = trunc i64 %6 to i32
  store i32 %7, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = icmp slt i32 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  store i32 0, i32* %4, align 4
  br label %16

11:                                               ; preds = %1
  %12 = load i32, i32* %4, align 4
  %13 = icmp sgt i32 %12, 255
  br i1 %13, label %14, label %15

14:                                               ; preds = %11
  store i32 255, i32* %4, align 4
  br label %15

15:                                               ; preds = %14, %11
  br label %16

16:                                               ; preds = %15, %10
  %17 = load i32, i32* @GL_TEXTURE_2D_ARRAY_EXT, align 4
  %18 = load i32*, i32** @voxel_tex, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 1
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @glBindTexture(i32 %17, i32 %20)
  store i32 0, i32* %3, align 4
  br label %22

22:                                               ; preds = %43, %16
  %23 = load i32, i32* %3, align 4
  %24 = icmp slt i32 %23, 64
  br i1 %24, label %25, label %46

25:                                               ; preds = %22
  %26 = load i32, i32* %4, align 4
  %27 = load i32**, i32*** @tex2_data, align 8
  %28 = load i32, i32* %3, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds i32*, i32** %27, i64 %29
  %31 = load i32*, i32** %30, align 8
  %32 = getelementptr inbounds i32, i32* %31, i64 3
  store i32 %26, i32* %32, align 4
  %33 = load i32, i32* @GL_TEXTURE_2D_ARRAY_EXT, align 4
  %34 = load i32, i32* %3, align 4
  %35 = load i32, i32* @GL_RGBA, align 4
  %36 = load i32, i32* @GL_UNSIGNED_BYTE, align 4
  %37 = load i32**, i32*** @tex2_data, align 8
  %38 = load i32, i32* %3, align 4
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds i32*, i32** %37, i64 %39
  %41 = load i32*, i32** %40, align 8
  %42 = call i32 @glTexSubImage3DEXT(i32 %33, i32 0, i32 0, i32 0, i32 %34, i32 1, i32 1, i32 1, i32 %35, i32 %36, i32* %41)
  br label %43

43:                                               ; preds = %25
  %44 = load i32, i32* %3, align 4
  %45 = add nsw i32 %44, 1
  store i32 %45, i32* %3, align 4
  br label %22

46:                                               ; preds = %22
  ret void
}

declare dso_local i64 @stb_lerp(float, i32, i32) #1

declare dso_local i32 @glBindTexture(i32, i32) #1

declare dso_local i32 @glTexSubImage3DEXT(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
